deployment.yml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gke-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gke-test
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: gke-test
    spec:
      securityContext:
        runAsUser: 5777
      containers:
      - name: gke-test
        image: gcr.io/PROJECT_ID/IMAGE:TAG
        ports:
        - containerPort: 8443
        volumeMounts:
          - name: tls
            mountPath: /etc/tls
            readOnly: true
        securityContext:
          allowPrivilegeEscalation: false
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
      volumes:
        - name: tls
          secret:
            secretName: yourdomain-tls
