api-allow-8443.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow-8443
spec:
  podSelector:
    matchLabels:
      app: gke-test
  ingress:
  - ports:
    - port: 8443
    from:
    - podSelector:
        matchLabels:
          role: monitoring
