gke-test-deny-external-egress-default.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gke-test-deny-external-egress-default
spec:
  podSelector:
    matchLabels:
      app: gke-test
  policyTypes:
  - Egress
  egress: []
