gke-test-deny-external-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gke-test-deny-external-egress
  # namespace: gke-test-namespace
spec:
  podSelector:
    matchLabels:
      app: gke-test
  policyTypes:
  - Egress
  egress: []
  # - ports:
  #   - port: 53
  #     protocol: UDP
  #   - port: 53
  #     protocol: TCP
