gke-test-deny-external-ingress-default.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: gke-test-deny-external-ingress-default
spec:
  podSelector:
    matchLabels:
      app: gke-test
  policyTypes:
  - Ingress
  ingress: []
