gke-test-deny-external-ingress_copy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gke-test-deny-external-ingress
spec:
  podSelector:
    matchLabels:
      app: gke-test
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
