gke-test-deny-external.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gke-test-deny-external
spec:
  podSelector:
    matchLabels:
      app: gke-test
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - namespaceSelector: {}
  ingress:
  - to:
    - namespaceSelector: {}
